# Noteapp

./: CMakeLists.txt  README.md  main.cpp  note.cpp  note.h  notemanager.cpp  notemanager.h
qml/: NoteDelegate.qml  NoteEditPage.qml  NotesListPage.qml  main.qml
tests/: CMakeLists.txt  main.cpp  test_note.cpp  test_tst.cpp
отчёт/: ~$чётлаба3.docx  отчётлаба3.docx
